--- a/src/components/Meals/MealItem/MealItemForm.module.css
+++ b/src/components/Meals/MealItem/MealItemForm.module.css
@@ -2,6 +2,13 @@
     text-align: right;
   }
   
+  .form input{
+    border-radius: 3px;
+    border: 1px solid black;
+    padding-right: 0px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+  }
   .form button {
     font: inherit;
     cursor: pointer;
