--- a/src/components/Layout/Header2.module.css
+++ b/src/components/Layout/Header2.module.css
@@ -5,9 +5,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  /* background-color: transparent; */
-  background-color: #ffffff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  background-color: transparent; /* Initial transparent background */
   color: white;
   display: flex;
   justify-content: space-between;
@@ -47,7 +45,7 @@
   position: absolute;
   width: 100%;
   height: 2px; /* Set the underline height */
-  background-color: #ec3437; /* Color of the underline */
+  background-color: #333; /* Color of the underline */
   bottom: 0;
   left: 0;
   transform: scaleX(0); /* Initial scale to hide the underline */
@@ -80,5 +78,4 @@
   width: 110%;
   height: 100%;
   object-fit: cover;
-  transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
 }
