--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -12,6 +12,14 @@
   box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
 }
 
+/* .summary {
+  text-align: center;
+  max-width: 35rem;
+  position: absolute;
+  top: 150px;
+  left: 10px;
+} */
+
 .summary h2 {
   font-size: 2rem;
   margin-top: 0;
